--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!--Welcome section-->
     <section id="welcome-section">
-      <h1>Hey I'm Ira</h1>
+      <h1>Hey I'm Irina</h1>
       <p>a web-developer</p>
     </section>
 
