--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Welcome section-->
     <section id="welcome-section">
       <h1>Hey I'm Irina</h1>
-      <p>a web-developer</p>
+      <p>a frontend-developer</p>
     </section>
 
     <!--Projects-->
